--- a/docs/ha-config/automations.yaml
+++ b/docs/ha-config/automations.yaml
@@ -4,98 +4,34 @@
 # Sync routing state to input selects (updates dropdowns when matrix changes)
 - id: matrix_sync_routing_to_selects
   alias: "HDMI Matrix - Sync Routing to Input Selects"
+  mode: queued
   trigger:
     - platform: state
       entity_id: sensor.hdmi_matrix_routing
+      attribute: outputs
+  condition:
+    - condition: template
+      value_template: "{{ trigger.to_state.attributes.outputs is defined }}"
   action:
-    - service: input_select.select_option
-      target:
-        entity_id: input_select.matrix_output_1_source
-      data:
-        option: >
-          {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% if outputs %}
-            {{ (outputs | selectattr('output', 'eq', 1) | first).input | string }}
-          {% else %}
-            '1'
-          {% endif %}
-    - service: input_select.select_option
-      target:
-        entity_id: input_select.matrix_output_2_source
-      data:
-        option: >
-          {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% if outputs %}
-            {{ (outputs | selectattr('output', 'eq', 2) | first).input | string }}
-          {% else %}
-            '1'
-          {% endif %}
-    - service: input_select.select_option
-      target:
-        entity_id: input_select.matrix_output_3_source
-      data:
-        option: >
-          {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% if outputs %}
-            {{ (outputs | selectattr('output', 'eq', 3) | first).input | string }}
-          {% else %}
-            '1'
-          {% endif %}
-    - service: input_select.select_option
-      target:
-        entity_id: input_select.matrix_output_4_source
-      data:
-        option: >
-          {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% if outputs %}
-            {{ (outputs | selectattr('output', 'eq', 4) | first).input | string }}
-          {% else %}
-            '1'
-          {% endif %}
-    - service: input_select.select_option
-      target:
-        entity_id: input_select.matrix_output_5_source
-      data:
-        option: >
-          {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% if outputs %}
-            {{ (outputs | selectattr('output', 'eq', 5) | first).input | string }}
-          {% else %}
-            '1'
-          {% endif %}
-    - service: input_select.select_option
-      target:
-        entity_id: input_select.matrix_output_6_source
-      data:
-        option: >
-          {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% if outputs %}
-            {{ (outputs | selectattr('output', 'eq', 6) | first).input | string }}
-          {% else %}
-            '1'
-          {% endif %}
-    - service: input_select.select_option
-      target:
-        entity_id: input_select.matrix_output_7_source
-      data:
-        option: >
-          {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% if outputs %}
-            {{ (outputs | selectattr('output', 'eq', 7) | first).input | string }}
-          {% else %}
-            '1'
-          {% endif %}
-    - service: input_select.select_option
-      target:
-        entity_id: input_select.matrix_output_8_source
-      data:
-        option: >
-          {% set outputs = state_attr('sensor.hdmi_matrix_routing', 'outputs') %}
-          {% if outputs %}
-            {{ (outputs | selectattr('output', 'eq', 8) | first).input | string }}
-          {% else %}
-            '1'
-          {% endif %}
+    - variables:
+        outputs: "{{ state_attr('sensor.hdmi_matrix_routing', 'outputs') }}"
+    - repeat:
+        count: 8
+        sequence:
+          - variables:
+              output_num: "{{ repeat.index }}"
+              output_data: "{{ outputs | selectattr('output', 'eq', output_num) | list }}"
+              current_input: >
+                {% if output_data | length > 0 and output_data[0].input %}
+                  {{ output_data[0].input | string }}
+                {% else %}
+                  {{ states('input_select.matrix_output_' ~ output_num ~ '_source') }}
+                {% endif %}
+          - service: input_select.select_option
+            target:
+              entity_id: "input_select.matrix_output_{{ output_num }}_source"
+            data:
+              option: "{{ current_input }}"
 
 # Output 1 automation
 - id: matrix_output_1_changed
@@ -105,7 +41,9 @@
       entity_id: input_select.matrix_output_1_source
   condition:
     - condition: template
-      value_template: "{{ trigger.to_state.state != 'unknown' and trigger.to_state.state != 'unavailable' }}"
+      value_template: "{{ trigger.to_state.state not in ['unknown', 'unavailable'] }}"
+    - condition: template
+      value_template: "{{ trigger.from_state.state != trigger.to_state.state }}"
   action:
     - service: rest_command.matrix_route_output_1
       data:
@@ -119,7 +57,9 @@
       entity_id: input_select.matrix_output_2_source
   condition:
     - condition: template
-      value_template: "{{ trigger.to_state.state != 'unknown' and trigger.to_state.state != 'unavailable' }}"
+      value_template: "{{ trigger.to_state.state not in ['unknown', 'unavailable'] }}"
+    - condition: template
+      value_template: "{{ trigger.from_state.state != trigger.to_state.state }}"
   action:
     - service: rest_command.matrix_route_output_2
       data:
@@ -133,7 +73,9 @@
       entity_id: input_select.matrix_output_3_source
   condition:
     - condition: template
-      value_template: "{{ trigger.to_state.state != 'unknown' and trigger.to_state.state != 'unavailable' }}"
+      value_template: "{{ trigger.to_state.state not in ['unknown', 'unavailable'] }}"
+    - condition: template
+      value_template: "{{ trigger.from_state.state != trigger.to_state.state }}"
   action:
     - service: rest_command.matrix_route_output_3
       data:
@@ -147,7 +89,9 @@
       entity_id: input_select.matrix_output_4_source
   condition:
     - condition: template
-      value_template: "{{ trigger.to_state.state != 'unknown' and trigger.to_state.state != 'unavailable' }}"
+      value_template: "{{ trigger.to_state.state not in ['unknown', 'unavailable'] }}"
+    - condition: template
+      value_template: "{{ trigger.from_state.state != trigger.to_state.state }}"
   action:
     - service: rest_command.matrix_route_output_4
       data:
@@ -161,7 +105,9 @@
       entity_id: input_select.matrix_output_5_source
   condition:
     - condition: template
-      value_template: "{{ trigger.to_state.state != 'unknown' and trigger.to_state.state != 'unavailable' }}"
+      value_template: "{{ trigger.to_state.state not in ['unknown', 'unavailable'] }}"
+    - condition: template
+      value_template: "{{ trigger.from_state.state != trigger.to_state.state }}"
   action:
     - service: rest_command.matrix_route_output_5
       data:
@@ -175,7 +121,9 @@
       entity_id: input_select.matrix_output_6_source
   condition:
     - condition: template
-      value_template: "{{ trigger.to_state.state != 'unknown' and trigger.to_state.state != 'unavailable' }}"
+      value_template: "{{ trigger.to_state.state not in ['unknown', 'unavailable'] }}"
+    - condition: template
+      value_template: "{{ trigger.from_state.state != trigger.to_state.state }}"
   action:
     - service: rest_command.matrix_route_output_6
       data:
@@ -189,7 +137,9 @@
       entity_id: input_select.matrix_output_7_source
   condition:
     - condition: template
-      value_template: "{{ trigger.to_state.state != 'unknown' and trigger.to_state.state != 'unavailable' }}"
+      value_template: "{{ trigger.to_state.state not in ['unknown', 'unavailable'] }}"
+    - condition: template
+      value_template: "{{ trigger.from_state.state != trigger.to_state.state }}"
   action:
     - service: rest_command.matrix_route_output_7
       data:
@@ -203,7 +153,9 @@
       entity_id: input_select.matrix_output_8_source
   condition:
     - condition: template
-      value_template: "{{ trigger.to_state.state != 'unknown' and trigger.to_state.state != 'unavailable' }}"
+      value_template: "{{ trigger.to_state.state not in ['unknown', 'unavailable'] }}"
+    - condition: template
+      value_template: "{{ trigger.from_state.state != trigger.to_state.state }}"
   action:
     - service: rest_command.matrix_route_output_8
       data:
